--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <meta property="og:title" content="Gabriel Cavalcanti – Desenvolvedor FullStack" />
     <meta property="og:description" content="Portfólio Profissional de Gabriel Cavalcanti - Desenvolvedor Fullstack" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://gabrielcavalcanti.tech/uploads/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://gabrielcavalcanti.tech/uploads/logo.png" />
   </head>
 
   <body>
